removed dev docs from nav menu, move to footer, removed latin

--- a/src/i18n/locales/en-CA/translations.json
+++ b/src/i18n/locales/en-CA/translations.json
@@ -3,6 +3,5 @@
   "header.login": "LOGIN",
   "header.about": "about Us",
   "header.personal": "personal",
-  "header.business": "business",
-  "header.personal-profile": "dev docs"
+  "header.business": "business"
 }
