--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -3,6 +3,5 @@
   "header.login": "CONNEXION",
   "header.about": "à propos de nous",
   "header.personal": "personnel",
-  "header.business": "Entreprise",
-  "header.personal-profile": "documents de développement"
+  "header.business": "Entreprise"
 }
