--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -16,5 +16,12 @@
   "about.our_values": "NOS VALEURS",
   "about.our_values_description": "Nous pensons que nos clients méritent le maximum de sécurité et de transparence. Nous croyons aux choix pour tout le monde, quelle que soit la taille de votre compte bancaire. Nous croyons qu'il faut récompenser nos clients chaque jour, car nous savons qu'un peu plus d'argent peut donner aux gens beaucoup plus de pouvoir. Et il était temps que le pouvoir soit accessible à tous.",
   "about.our_partner": "NOS PARTENAIRES",
-  "about.our_partner_description": "Nous travaillons main dans la main avec les organismes gouvernementaux et les partenaires du secteur financier pour garantir que nos clients obtiennent le meilleur des meilleurs. Découvrez qui est sur notre liste."
+  "about.our_partner_description": "Nous travaillons main dans la main avec les organismes gouvernementaux et les partenaires du secteur financier pour garantir que nos clients obtiennent le meilleur des meilleurs. Découvrez qui est sur notre liste.",
+
+  "business.header_title": "NEEDS_LOC", 
+  "business.header_desc": "NEEDS_LOC",
+  "business.sign_up_btn_title": "NEEDS_LOC",
+  "business.business_description_1": "NEEDS_LOC",
+  "business.business_description_2": "NEEDS_LOC",
+  "business.business_description_3": "NEEDS_LOC"
 }
