--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -6,19 +6,28 @@
   "header.business": "negocio",
   "header.personal-profile": "dev docs",
   
-  "about.who_is": "QUIÉN ES",
-  "about.who_is_description_1": "Somos fanáticos de las finanzas que conocen el sistema. Y creemos que es demasiado complicado, demasiado caro y demasiado difícil. El hecho de que siempre haya sido así no significa que no podamos hacerlo mejor. Nos apasiona trabajar con el sistema para que sea gratificante para todos. Creamos Zippy Cash para cumplir esa promesa.",
-  "about.who_is_description_2": "En un mundo justo, los servicios financieros transparentes y asequibles serían accesibles para todos, independientemente de quiénes sean. Pero ... necesita un título en derecho para comprender la letra pequeña y, al final, los consumidores terminan siendo estafados, especialmente aquellos que tienen menos. Zippy Cash existe para romper estas cadenas y hacer que los pagos fáciles, rápidos y seguros sean una realidad para cualquiera que los desee.",
-  "about.the_team": "EL EQUIPO",
-  "about.the_team_description": "Somos fanáticos de las finanzas y la tecnología apasionados por la libertad de elección que el mundo digital ha hecho posible. Nos encantan otros pensadores innovadores y magos de FinTech, así que si ese es usted, consulte las oportunidades de empleo de Zippy Cash aquí.",
-  "about.our_mission": "NUESTRA MISIÓN",
-  "about.our_mission_description": "Nuestra misión es nivelar el campo de juego y recompensar a los clientes por hacer las cosas que hacen todos los días, incluso las cosas pequeñas. Hacemos esto a través de la experiencia, las asociaciones y la mejor tecnología de su clase que nos permite aumentar su dinero, más rápido, más fácil, más seguro ... y también divertido, ¡eso es Zippy!",
-  "about.our_values": "NUESTROS VALORES",
-  "about.our_values_description": "Creemos que nuestros clientes merecen la máxima seguridad y transparencia. Creemos en las opciones para todos, independientemente del tamaño de su cuenta bancaria. Creemos en recompensar a nuestros clientes todos los días, porque sabemos que un poco más de dinero puede dar a la gente mucho más poder. Y ya es hora de que el poder sea accesible para todos.",
-  "about.our_partner": "NUESTROS COMPAÑEROS",
-  "about.our_partner_description": "Trabajamos de la mano con organismos gubernamentales y socios de la industria financiera para garantizar que nuestros clientes obtengan lo mejor de lo mejor. Mira quién está en nuestra lista.",
+  "about.who_is": "NEEDS_LOC",
+  "about.who_is_description_1": "NEEDS_LOC",
+  "about.who_is_description_2": "NEEDS_LOC",
+  "about.the_team": "NEEDS_LOC",
+  "about.the_team_description": "NEEDS_LOC",
+  "about.our_mission": "NEEDS_LOC",
+  "about.our_mission_description": "NEEDS_LOC",
+  "about.our_values": "NEEDS_LOC",
+  "about.our_values_description": "NEEDS_LOC",
+  "about.our_partner": "NEEDS_LOC",
+  "about.our_partner_description": "NEEDS_LOC",
+ 
+  "common.business_title": "NEEDS_LOC",
+  "common.sign_up": "NEEDS_LOC",
+  "common.first_name": "NEEDS_LOC",
+  "common.last_name": "NEEDS_LOC",
+  "common.email": "NEEDS_LOC",
+  "common.password": "NEEDS_LOC",
+  "common.confirm_password": "NEEDS_LOC",
+  "common.agree_title": "NEEDS_LOC",
+  "common.create_your_account": "NEEDS_LOC",
   
-  "business.header_title": "NEEDS_LOC", 
   "business.header_desc": "NEEDS_LOC",
   "business.sign_up_btn_title": "NEEDS_LOC",
   "business.business_description_1": "NEEDS_LOC",
