--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -28,6 +28,8 @@
   "common.agree_title": "I agree to lorem ipsum dolor sit amet",
   "common.create_your_account": "Create your account",
   "common.personal_banking": "personal banking",
+  "common.send_btn": "SEND",
+  "common.spend_btn": "SPEND",
 
   "business.header_desc": "Make your money work your way!",
   "business.sign_up_btn_title": "Sign up for a business account",
@@ -48,5 +50,15 @@
   "home.answer_3": "Zippy is zippier. A lot zippier. Almost instantaneous, even across borders. We doubled down on speed and security to make sure your money goes where you want it, when you want it, with nothing getting in the way. <strong>You've got places to go after all, so go on!</strong>",
   "home.image_alt_1": "happy young woman on her phone",
   "home.image_alt_2": "young man looking positive",
-  "home.image_alt_3": "smiling young woman"
+  "home.image_alt_3": "smiling young woman",
+
+  "personal.header_title": "You can do that with Zippy!",
+  "personal.sign_up_btn": "Sign up for a personal account",
+  "personal.send_description": "We bet you're wondering, can I send money across the border inexpensively… yes you can! Can I link Zippy to my debit and credit so my transactions are all in one place?…yes you can! Can I Zipp it to my friend Erica for those late night study eats she ordered in? YES YOU CAN. Just say Zipp it to me and it's done!",
+  "personal.spend_description": "We know what you’re thinking. You want to shop cross border and get the best rates. You want to see all your bills in one spot, at one time. You want the lowest fees when you spend using Zippy Cash. We say.: yes yes and yes again. It's the power of positive thinking! (and a hub platform that centralizes best-inclass financial systems and optimizes options based on your specific needs within seconds - but hey, that's just how we Zipp)",
+  "personal.hunzpoints": "FUNZPOINTS",
+  "personal.hunzpoints_description": "We like giving you more than you came for. Funzpoints is our social gaming platform that rewards you with entries into daily cash jackpots. Play for free and earn actual dollars you can transfer to your real world wallet! It's so much fun to say \"here, have extra!\"",
+  "personal.image_alt_1": "young man happily looking at his phone while holding a zippy card",
+  "personal.image_alt_2": "a zippy card tapping a debt machine",
+  "personal.image_alt_3": "young woman playfully showing her zippy card"
 }
