--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -18,24 +18,21 @@
   "about.our_partner": "OUR PARTNERS",
   "about.our_partner_description": "We work hand in hand with government bodies and financial industry partners to ensure our customers get the best of the best. Check out who's on our roster.",
 
-  "common.business_title": "business banking",
-  "common.sign_up": "Sign Up",
-  "common.first_name": "First Name",
-  "common.last_name": "Last Name",
-  "common.email": "Email",
-  "common.password": "Password",
-  "common.confirm_password": "Confirm Password",
-  "common.agree_title": "I agree to lorem ipsum dolor sit amet",
-  "common.create_your_account": "Create your account",
-  "common.personal_banking": "personal banking",
-  "common.send_btn": "SEND",
-  "common.spend_btn": "SPEND",
-
   "business.header_desc": "Make your money work your way!",
   "business.sign_up_btn_title": "Sign up for a business account",
   "business.business_description_1": "No matter how big or small your business is, everyone is in the global market. That's why you need the best rates and lowest fees for you brand. Zippy Cash gives you the best rates available every time and takes the complexity out of international commerce. Our fees can't be beat.",
   "business.business_description_2": "Setting up international bank accounts may sound daunting but with Zippy we deliver everything you need to start managing accounts abroad in minutes. How is it this easy? We have excellent partnerships with international financial brands, tech solutions that serve as an efficient connector, prioritizing ease, speed and security.",
   "business.business_description_3": "Paying invoices, people and employees just got zippier. We always give you the lowest transaction fees and make it easy (dare we say even fun?) to manage your payments.<br />Find out more here.",
+  "business.business_title": "business banking",
+  "business.sign_up": "Sign Up",
+  "business.first_name": "First Name",
+  "business.last_name": "Last Name",
+  "business.email": "Email",
+  "business.password": "Password",
+  "business.confirm_password": "Confirm Password",
+  "business.agree_title": "I agree to lorem ipsum dolor sit amet",
+  "business.create_your_account": "Create your account",
+  "business.personal_banking": "personal banking",
 
   "home.sign_up_btn": "SIGN UP!",
   "home.zip_it": "Zipp it<br />to me!",
@@ -51,6 +48,7 @@
   "home.image_alt_1": "happy young woman on her phone",
   "home.image_alt_2": "young man looking positive",
   "home.image_alt_3": "smiling young woman",
+  "home.personal_banking": "personal banking",
 
   "personal.header_title": "You can do that with Zippy!",
   "personal.sign_up_btn": "Sign up for a personal account",
@@ -60,5 +58,20 @@
   "personal.hunzpoints_description": "We like giving you more than you came for. Funzpoints is our social gaming platform that rewards you with entries into daily cash jackpots. Play for free and earn actual dollars you can transfer to your real world wallet! It's so much fun to say \"here, have extra!\"",
   "personal.image_alt_1": "young man happily looking at his phone while holding a zippy card",
   "personal.image_alt_2": "a zippy card tapping a debt machine",
-  "personal.image_alt_3": "young woman playfully showing her zippy card"
+  "personal.image_alt_3": "young woman playfully showing her zippy card",
+  "personal.send_btn": "SEND",
+  "personal.spend_btn": "SPEND",
+  "personal.personal_banking": "personal banking",
+
+  "profile.profile_name": "Profile Name",
+  "profile.contact_info": "Contact Info",
+  "profile.account_info": "Account Info",
+  "profile.language": "Language",
+  "profile.first_name": "First Name",
+  "profile.last_name": "Last Name",
+  "profile.email": "Email",
+  "profile.address": "Address",
+  "profile.City": "City",
+  "profile.province": "Province",
+  "profile.postal_code": "Postal Code"
 }
