--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -57,5 +57,17 @@
   "personal.hunzpoints_description": "NEEDS_LOC",
   "personal.image_alt_1": "NEEDS_LOC",
   "personal.image_alt_2": "NEEDS_LOC",
-  "personal.image_alt_3": "NEEDS_LOC"
+  "personal.image_alt_3": "NEEDS_LOC",
+
+  "profile.profile_name": "NEEDS_LOC",
+  "profile.contact_info": "NEEDS_LOC",
+  "profile.account_info": "NEEDS_LOC",
+  "profile.language": "NEEDS_LOC",
+  "profile.first_name": "NEEDS_LOC",
+  "profile.last_name": "NEEDS_LOC",
+  "profile.email": "NEEDS_LOC",
+  "profile.address": "NEEDS_LOC",
+  "profile.City": "NEEDS_LOC",
+  "profile.province": "NEEDS_LOC",
+  "profile.postal_code": "NEEDS_LOC"
 }
