--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -17,22 +17,22 @@
   "about.our_values_description": "NEEDS_LOC",
   "about.our_partner": "NEEDS_LOC",
   "about.our_partner_description": "NEEDS_LOC",
- 
-  "common.business_title": "NEEDS_LOC",
-  "common.sign_up": "NEEDS_LOC",
-  "common.first_name": "NEEDS_LOC",
-  "common.last_name": "NEEDS_LOC",
-  "common.email": "NEEDS_LOC",
-  "common.password": "NEEDS_LOC",
-  "common.confirm_password": "NEEDS_LOC",
-  "common.agree_title": "NEEDS_LOC",
-  "common.create_your_account": "NEEDS_LOC",
-  
+
   "business.header_desc": "NEEDS_LOC",
   "business.sign_up_btn_title": "NEEDS_LOC",
   "business.business_description_1": "NEEDS_LOC",
   "business.business_description_2": "NEEDS_LOC",
   "business.business_description_3": "NEEDS_LOC",
+  "business.business_title": "NEEDS_LOC",
+  "business.sign_up": "NEEDS_LOC",
+  "business.first_name": "NEEDS_LOC",
+  "business.last_name": "NEEDS_LOC",
+  "business.email": "NEEDS_LOC",
+  "business.password": "NEEDS_LOC",
+  "business.confirm_password": "NEEDS_LOC",
+  "business.agree_title": "NEEDS_LOC",
+  "business.create_your_account": "NEEDS_LOC",
+  "business.personal_banking": "personal banking",
 
   "home.sign_up_btn": "NEEDS_LOC",
   "home.zip_it": "NEEDS_LOC",
@@ -48,7 +48,8 @@
   "home.image_alt_1": "NEEDS_LOC",
   "home.image_alt_2": "NEEDS_LOC",
   "home.image_alt_3": "NEEDS_LOC",
-
+  "home.personal_banking": "NEEDS_LOC",
+  
   "personal.header_title": "NEEDS_LOC",
   "personal.sign_up_btn": "NEEDS_LOC",
   "personal.send_description": "NEEDS_LOC",
