--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -18,21 +18,21 @@
   "about.our_partner": "NEEDS_LOC",
   "about.our_partner_description": "NEEDS_LOC",
 
-  "common.business_title": "NEEDS_LOC",
-  "common.sign_up": "NEEDS_LOC",
-  "common.first_name": "NEEDS_LOC",
-  "common.last_name": "NEEDS_LOC",
-  "common.email": "NEEDS_LOC",
-  "common.password": "NEEDS_LOC",
-  "common.confirm_password": "NEEDS_LOC",
-  "common.agree_title": "NEEDS_LOC",
-  "common.create_your_account": "NEEDS_LOC",
-
   "business.header_desc": "NEEDS_LOC",
   "business.sign_up_btn_title": "NEEDS_LOC",
   "business.business_description_1": "NEEDS_LOC",
   "business.business_description_2": "NEEDS_LOC",
   "business.business_description_3": "NEEDS_LOC",
+  "business.business_title": "NEEDS_LOC",
+  "business.sign_up": "NEEDS_LOC",
+  "business.first_name": "NEEDS_LOC",
+  "business.last_name": "NEEDS_LOC",
+  "business.email": "NEEDS_LOC",
+  "business.password": "NEEDS_LOC",
+  "business.confirm_password": "NEEDS_LOC",
+  "business.agree_title": "NEEDS_LOC",
+  "business.create_your_account": "NEEDS_LOC",
+  "business.personal_banking": "personal banking",
 
   "home.sign_up_btn": "NEEDS_LOC",
   "home.zip_it": "NEEDS_LOC",
@@ -48,6 +48,7 @@
   "home.image_alt_1": "NEEDS_LOC",
   "home.image_alt_2": "NEEDS_LOC",
   "home.image_alt_3": "NEEDS_LOC",
+  "home.personal_banking": "NEEDS_LOC",
   
   "personal.header_title": "NEEDS_LOC",
   "personal.sign_up_btn": "NEEDS_LOC",
@@ -58,6 +59,9 @@
   "personal.image_alt_1": "NEEDS_LOC",
   "personal.image_alt_2": "NEEDS_LOC",
   "personal.image_alt_3": "NEEDS_LOC",
+  "personal.send_btn": "NEEDS_LOC",
+  "personal.spend_btn": "NEEDS_LOC",
+  "personal.personal_banking": "NEEDS_LOC",
 
   "profile.profile_name": "NEEDS_LOC",
   "profile.contact_info": "NEEDS_LOC",
