Fixed all issues based on feedback

--- a/src/i18n/locales/en-CA/translations.json
+++ b/src/i18n/locales/en-CA/translations.json
@@ -4,7 +4,7 @@
   "header.about": "about Us",
   "header.personal": "personal",
   "header.business": "business",
-  "header.personal-profile": "dev docs",
+  "header.personal_profile": "dev docs",
 
   "about.who_is": "WHO IS",
   "about.who_is_description_1": "We're finance geeks who know the system. And we think it's too complicated, too expensive and too difficult. Just because it's always been that way doesn't mean we can't do better. We're passionate about working the system to make it rewarding for everyone. We created Zippy Cash to deliver on that promise.",
@@ -34,6 +34,16 @@
   "business.create_your_account": "Create your account",
   "business.personal_banking": "personal banking",
 
+  "business_signup.business_title": "business banking",
+  "business_signup.sign_up": "Sign Up",
+  "business_signup.first_name": "First Name",
+  "business_signup.last_name": "Last Name",
+  "business_signup.email": "Email",
+  "business_signup.password": "Password",
+  "business_signup.confirm_password": "Confirm Password",
+  "business_signup.agree_title": "I agree to the <1>terms and conditions</1>",
+  "business_signup.create_your_account": "Create your account",
+
   "home.sign_up_btn": "SIGN UP!",
   "home.zip_it": "Zipp it<br />to me!",
   "home.personal_sign_up": "personal sign up",
@@ -54,8 +64,8 @@
   "personal.sign_up_btn": "Sign up for a personal account",
   "personal.send_description": "We bet you're wondering, can I send money across the border inexpensively… yes you can! Can I link Zippy to my debit and credit so my transactions are all in one place?…yes you can! Can I Zipp it to my friend Erica for those late night study eats she ordered in? YES YOU CAN. Just say Zipp it to me and it's done!",
   "personal.spend_description": "We know what you’re thinking. You want to shop cross border and get the best rates. You want to see all your bills in one spot, at one time. You want the lowest fees when you spend using Zippy Cash. We say.: yes yes and yes again. It's the power of positive thinking! (and a hub platform that centralizes best-inclass financial systems and optimizes options based on your specific needs within seconds - but hey, that's just how we Zipp)",
-  "personal.hunzpoints": "FUNZPOINTS",
-  "personal.hunzpoints_description": "We like giving you more than you came for. Funzpoints is our social gaming platform that rewards you with entries into daily cash jackpots. Play for free and earn actual dollars you can transfer to your real world wallet! It's so much fun to say \"here, have extra!\"",
+  "personal.funzpoints": "FUNZPOINTS",
+  "personal.funzpoints_description": "We like giving you more than you came for. Funzpoints is our social gaming platform that rewards you with entries into daily cash jackpots. Play for free and earn actual dollars you can transfer to your real world wallet! It's so much fun to say \"here, have extra!\"",
   "personal.image_alt_1": "young man happily looking at his phone while holding a zippy card",
   "personal.image_alt_2": "a zippy card tapping a debt machine",
   "personal.image_alt_3": "young woman playfully showing her zippy card",
@@ -71,7 +81,7 @@
   "profile.last_name": "Last Name",
   "profile.email": "Email",
   "profile.address": "Address",
-  "profile.City": "City",
+  "profile.city": "City",
   "profile.province": "Province",
   "profile.postal_code": "Postal Code",
 
