--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -4,7 +4,7 @@
   "header.about": "NEEDS_LOC",
   "header.personal": "NEEDS_LOC",
   "header.business": "NEEDS_LOC",
-  "header.personal-profile": "NEEDS_LOC",
+  "header.personal_profile": "NEEDS_LOC",
   
   "about.who_is": "NEEDS_LOC",
   "about.who_is_description_1": "NEEDS_LOC",
@@ -32,7 +32,17 @@
   "business.confirm_password": "NEEDS_LOC",
   "business.agree_title": "NEEDS_LOC",
   "business.create_your_account": "NEEDS_LOC",
-  "business.personal_banking": "personal banking",
+  "business.personal_banking": "NEEDS_LOC",
+
+  "business_signup.business_title": "NEEDS_LOC",
+  "business_signup.sign_up": "NEEDS_LOC",
+  "business_signup.first_name": "NEEDS_LOC",
+  "business_signup.last_name": "NEEDS_LOC",
+  "business_signup.email": "NEEDS_LOC",
+  "business_signup.password": "NEEDS_LOC",
+  "business_signup.confirm_password": "NEEDS_LOC",
+  "business_signup.agree_title": "NEEDS_LOC",
+  "business_signup.create_your_account": "NEEDS_LOC",
 
   "home.sign_up_btn": "NEEDS_LOC",
   "home.zip_it": "NEEDS_LOC",
@@ -54,8 +64,8 @@
   "personal.sign_up_btn": "NEEDS_LOC",
   "personal.send_description": "NEEDS_LOC",
   "personal.spend_description": "NEEDS_LOC",
-  "personal.hunzpoints": "NEEDS_LOC",
-  "personal.hunzpoints_description": "NEEDS_LOC",
+  "personal.funzpoints": "NEEDS_LOC",
+  "personal.funzpoints_description": "NEEDS_LOC",
   "personal.image_alt_1": "NEEDS_LOC",
   "personal.image_alt_2": "NEEDS_LOC",
   "personal.image_alt_3": "NEEDS_LOC",
@@ -71,7 +81,7 @@
   "profile.last_name": "NEEDS_LOC",
   "profile.email": "NEEDS_LOC",
   "profile.address": "NEEDS_LOC",
-  "profile.City": "NEEDS_LOC",
+  "profile.city": "NEEDS_LOC",
   "profile.province": "NEEDS_LOC",
   "profile.postal_code": "NEEDS_LOC",
 
