--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -4,7 +4,7 @@
   "header.about": "Acerca de Nosotros",
   "header.personal": "NEEDS_LOC",
   "header.business": "NEEDS_LOC",
-  "header.personal-profile": "NEEDS_LOC",
+  "header.personal_profile": "NEEDS_LOC",
   
   "about.who_is": "NEEDS_LOC",
   "about.who_is_description_1": "Somos Geeks financieros que conocen el sistema. Y creemos que es demasiado complicado, costoso y difícil. Simplemente porque siempre haya sido así no significa que no podamos hacerlo mejor. Somos apasionados acerca de trabajar el sistema para lograr hacerlos gratificante para todos. Hemos creado Zippy Cash para cumplir con esa promesa.",
@@ -34,6 +34,16 @@
   "business.create_your_account": "NEEDS_LOC",
   "business.personal_banking": "Banca Personal",
 
+  "business_signup.business_title": "Banca Corporativa",
+  "business_signup.sign_up": "NEEDS_LOC",
+  "business_signup.first_name": "NEEDS_LOC",
+  "business_signup.last_name": "NEEDS_LOC",
+  "business_signup.email": "NEEDS_LOC",
+  "business_signup.password": "NEEDS_LOC",
+  "business_signup.confirm_password": "NEEDS_LOC",
+  "business_signup.agree_title": "NEEDS_LOC",
+  "business_signup.create_your_account": "NEEDS_LOC",
+
   "home.sign_up_btn": "NEEDS_LOC",
   "home.zip_it": "NEEDS_LOC",
   "home.personal_sign_up": "NEEDS_LOC",
@@ -54,8 +64,8 @@
   "personal.sign_up_btn": "Regístrate para una cuenta personal",
   "personal.send_description": "Apuesto que te preguntas, ¿puedo enviar dinero a través de la frontera a bajo costo?... ¡Claro que puedes! ¿puedo vinculara mi Zippy a débito y crédito de tal manera que todas mis transacciones estén en un mismo lugar?... claro que puedes! ¿Puedo enviar un Zipp a mi amiga Érica por la comida que nos ordeno en esa noche de estudio el otro día? ¡CLARO QUE PUEDES! Solo envíame un Zipp y listo",
   "personal.spend_description": "Nosotros sabemos lo que estas pensando. Quieres comprar sin fronteras y obtener las mejores tarifas. Quieres ver todas tus facturas en un solo lugar. Quieres las tarifas mas bajas cuando usas tu Zippy Cash. Y a todo eso te respondemos: si, si, y una vez más si. ¡Es el poder del pensamiento positivo! (además de una plataforma que centraliza los mejores sistemas financieros para así poder optimizar opciones basadas en tus necesidades especificas en cuestión de segundos, pero bueno así es como nosotros Zipp",
-  "personal.hunzpoints": "FUNZPOINTS",
-  "personal.hunzpoints_description": "Nos gusta darte mas de por lo que viniste. Funzpoints es nuestra plataforma social de juegos que te premia con entradas a botes diarios en efectivo. ¡Juega gratis y gana dólares que puedes transferir a billetera en el mundo real! Es tan divertido decir “Adelante, toma un poco extra”",
+  "personal.funzpoints": "FUNZPOINTS",
+  "personal.funzpoints_description": "Nos gusta darte mas de por lo que viniste. Funzpoints es nuestra plataforma social de juegos que te premia con entradas a botes diarios en efectivo. ¡Juega gratis y gana dólares que puedes transferir a billetera en el mundo real! Es tan divertido decir “Adelante, toma un poco extra”",
   "personal.image_alt_1": "NEEDS_LOC",
   "personal.image_alt_2": "NEEDS_LOC",
   "personal.image_alt_3": "NEEDS_LOC",
@@ -71,7 +81,7 @@
   "profile.last_name": "NEEDS_LOC",
   "profile.email": "NEEDS_LOC",
   "profile.address": "NEEDS_LOC",
-  "profile.City": "NEEDS_LOC",
+  "profile.city": "NEEDS_LOC",
   "profile.province": "NEEDS_LOC",
   "profile.postal_code": "NEEDS_LOC",
 
