updating es-US translations

--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -1,12 +1,12 @@
 {
-  "header.language": "NEEDS_LOC",
-  "header.login": "NEEDS_LOC",
+  "header.language": "IDIOMA",
+  "header.login": "LOGIN",
   "header.about": "Acerca de Nosotros",
-  "header.personal": "NEEDS_LOC",
-  "header.business": "NEEDS_LOC",
+  "header.personal": "PERSONAL",
+  "header.business": "COORPORATIVA",
   "header.personal_profile": "NEEDS_LOC",
   
-  "about.who_is": "NEEDS_LOC",
+  "about.who_is": "QUIENES SOMOS",
   "about.who_is_description_1": "Somos Geeks financieros que conocen el sistema. Y creemos que es demasiado complicado, costoso y difícil. Simplemente porque siempre haya sido así no significa que no podamos hacerlo mejor. Somos apasionados acerca de trabajar el sistema para lograr hacerlos gratificante para todos. Hemos creado Zippy Cash para cumplir con esa promesa.",
   "about.who_is_description_2": "En un mundo perfecto, la trasparencia y bajos costos deberían ser accesibles a todo el mundo, independientemente de quien sea. Pero… se necesita un titulo en derecho para entender la letra fina y, al final, los consumidores son los que terminan siendo estafados, en especial aquellos que tienen menos recursos. Zyppy Cash existe para romper esas cadenas y permitir hacer tus pagos de manera sencilla, rápida y segura para todos sus usuarios.",
   "about.the_team": "Nuestro Equipo",
@@ -24,40 +24,40 @@
   "business.business_description_2": "La apertura de cuentas bancarias internacionales puede sonar desafiante, pero con Zippy nosotros te entregamos todo lo que necesitas para comenzar a manejar tus cuentas en el exterior en minutos. ¿Como puede ser tan fácil? Gracias a las excelentes relaciones que tenemos con las marcas financieras internacionales y soluciones tecnológicas que sirven como un conector eficiente con la prioridad en la simpleza, la velocidad y la seguridad.",
   "business.business_description_3": "Cancelar sus facturas, planilla e incluso enviar dinero ahora es mas fácil con Zippy. Nosotros siempre te ofrecemos las tasas mas bajas por tus transacciones y lo asemos sencillo. (hasta nos atrevemos a decir divertido) el manejar tus pagos.<br />Obtén más información acá.",
   "business.business_title": "Banca Corporativa",
-  "business.sign_up": "NEEDS_LOC",
-  "business.first_name": "NEEDS_LOC",
-  "business.last_name": "NEEDS_LOC",
-  "business.email": "NEEDS_LOC",
-  "business.password": "NEEDS_LOC",
-  "business.confirm_password": "NEEDS_LOC",
-  "business.agree_title": "NEEDS_LOC",
-  "business.create_your_account": "NEEDS_LOC",
+  "business.sign_up": "REGISTRATE",
+  "business.first_name": "NOMBRE",
+  "business.last_name": "APELLIDO",
+  "business.email": "CORREO ELECTRONICO",
+  "business.password": "CONTRASEÑA",
+  "business.confirm_password": "CONFIRMAR CONTRASEÑA",
+  "business.agree_title": "ACEPTA LOS TERMINOS Y CONDICIONES",
+  "business.create_your_account": "CREAR SU CUENTA",
   "business.personal_banking": "Banca Personal",
 
   "business_signup.business_title": "Banca Corporativa",
-  "business_signup.sign_up": "NEEDS_LOC",
-  "business_signup.first_name": "NEEDS_LOC",
-  "business_signup.last_name": "NEEDS_LOC",
-  "business_signup.email": "NEEDS_LOC",
-  "business_signup.password": "NEEDS_LOC",
-  "business_signup.confirm_password": "NEEDS_LOC",
-  "business_signup.agree_title": "NEEDS_LOC",
-  "business_signup.create_your_account": "NEEDS_LOC",
+  "business_signup.sign_up": "REGISTRATE",
+  "business_signup.first_name": "NOMBRE",
+  "business_signup.last_name": "APELLIDOS",
+  "business_signup.email": "CORREO ELECTRONICO",
+  "business_signup.password": "CONTRASEÑA",
+  "business_signup.confirm_password": "CONFIRMAR CONTRASEÑA",
+  "business_signup.agree_title": "FIRMANDO ACA ACEPTA LOS TERMINOS Y CONDICIONES ",
+  "business_signup.create_your_account": "CREAR SU CUENTA",
 
-  "home.sign_up_btn": "NEEDS_LOC",
-  "home.zip_it": "NEEDS_LOC",
-  "home.personal_sign_up": "NEEDS_LOC",
-  "home.business_banking": "NEEDS_LOC",
-  "home.business_banking_desc": "NEEDS_LOC",
-  "home.question_1": "NEEDS_LOC",
-  "home.question_2": "NEEDS_LOC",
-  "home.question_3": "NEEDS_LOC",
-  "home.answer_1": "NEEDS_LOC",
-  "home.answer_2": "NEEDS_LOC",
-  "home.answer_3": "NEEDS_LOC",
-  "home.image_alt_1": "NEEDS_LOC",
-  "home.image_alt_2": "NEEDS_LOC",
-  "home.image_alt_3": "NEEDS_LOC",
+  "home.sign_up_btn": "REGISTRATE",
+  "home.zip_it": "MANDAME UN ZIPP",
+  "home.personal_sign_up": "REGISTRATE PERSONAL",
+  "home.business_banking": "REGISTRATE COORPORATIVO",
+  "home.business_banking_desc": "UN POCO MAS DE DINERO. MUCHOS MAS PODER",
+  "home.question_1": "QUIERES MAS DE TU DINERO?",
+  "home.question_2": "COMO LOGRAMOS HACERLO TAN BARATO",
+  "home.question_3": "NUESTRO NOMBRE NO ES SOLO POR SHOW",
+  "home.answer_1": "SI, CLARO QUE PUEDES! HAY UNA MEJOR MANERA. QUEREMOS FACILITARTE QUE PUEDAS HACER CON TU DINERO LO QUE DE VERDAD QUIERES HACER: GANALO, MANTENLO, USALO CON TANTA FACILIDAD Y SEGURIDAD COMO QUIERES - ADEMAS TE RECOMPENSAMOS POR ELLO. PORQUE? PORQUE ES TU DINERO Y DEBERIAS TENER OPCIONES. CON ZIPPY LAS TIENES TODAS",
+  "home.answer_2": "SOMOS CREYENTES QUE LOS SERVICIOS FINANCIEROS DEBERIAN SER UN GANAR GANAR. NOSTROS TOMAMOS MENOS DE TU DINERO SIMPLEMENTE PORQUE NUESTRAS TASAS NO NECESITAN SER TAN ALTAS. ES ASI DE SIMPLE",
+  "home.answer_3": "ZIPPY ES MAS SENCILLO. MUCHO MAS SENCILLO. PRACTICAMENTE INSTANTANEO, INCLUSIVE A TRAVES DE FRONTERAS. MAXIMISAMOS EN SEGURIDAD Y VELOCIDAD PARA ASEGURARNOS QUE TU DINERO VAYA DONDE USTED QUIERA, CUANDO USTED QUIERA, SIN QUE NADA SE ENTREMETA. TODOS TENEMOS LUGARES DONDE IR, ASI QUE VAMOS!",
+  "home.image_alt_1": "Joven feliz en su telefono",
+  "home.image_alt_2": "Joven viendose positivo",
+  "home.image_alt_3": "Joven mujer sonriente",
   "home.personal_banking": "Banca Personal",
   
   "personal.header_title": "¡Tu puedes hacerlo con Zippy!",
@@ -66,32 +66,32 @@
   "personal.spend_description": "Nosotros sabemos lo que estas pensando. Quieres comprar sin fronteras y obtener las mejores tarifas. Quieres ver todas tus facturas en un solo lugar. Quieres las tarifas mas bajas cuando usas tu Zippy Cash. Y a todo eso te respondemos: si, si, y una vez más si. ¡Es el poder del pensamiento positivo! (además de una plataforma que centraliza los mejores sistemas financieros para así poder optimizar opciones basadas en tus necesidades especificas en cuestión de segundos, pero bueno así es como nosotros Zipp",
   "personal.funzpoints": "FUNZPOINTS",
   "personal.funzpoints_description": "Nos gusta darte mas de por lo que viniste. Funzpoints es nuestra plataforma social de juegos que te premia con entradas a botes diarios en efectivo. ¡Juega gratis y gana dólares que puedes transferir a billetera en el mundo real! Es tan divertido decir “Adelante, toma un poco extra”",
-  "personal.image_alt_1": "NEEDS_LOC",
-  "personal.image_alt_2": "NEEDS_LOC",
-  "personal.image_alt_3": "NEEDS_LOC",
+  "personal.image_alt_1": "Joven feliz viendo su telefono mientras sostiene una tarjeta zippy",
+  "personal.image_alt_2": "una tarjeta zippy tapping una maquina de deudas",
+  "personal.image_alt_3": "Joven juguetona mostrando su tarjeta zippy",
   "personal.send_btn": "Enviar",
   "personal.spend_btn": "Gastar",
   "personal.personal_banking": "Banca Personal",
 
-  "profile.profile_name": "NEEDS_LOC",
-  "profile.contact_info": "NEEDS_LOC",
-  "profile.account_info": "NEEDS_LOC",
-  "profile.language": "NEEDS_LOC",
-  "profile.first_name": "NEEDS_LOC",
-  "profile.last_name": "NEEDS_LOC",
-  "profile.email": "NEEDS_LOC",
-  "profile.address": "NEEDS_LOC",
-  "profile.city": "NEEDS_LOC",
-  "profile.province": "NEEDS_LOC",
-  "profile.postal_code": "NEEDS_LOC",
+  "profile.profile_name": "Nombre de Perfil",
+  "profile.contact_info": "Informacion de contacto",
+  "profile.account_info": "Informacion de cuenta",
+  "profile.language": "Idioma",
+  "profile.first_name": "Nombre",
+  "profile.last_name": "Apellidos",
+  "profile.email": "Correo Electronico",
+  "profile.address": "Direccion",
+  "profile.city": "Ciudad",
+  "profile.province": "Provincia",
+  "profile.postal_code": "Codigo Postal",
 
   "personal_signup.personal_banking": "Banca Personal",
-  "personal_signup.signup_title": "NEEDS_LOC",
-  "personal_signup.first_name": "NEEDS_LOC",
-  "personal_signup.last_name": "NEEDS_LOC",
-  "personal_signup.email": "NEEDS_LOC",
-  "personal_signup.password": "NEEDS_LOC",
-  "personal_signup.confirm_password": "NEEDS_LOC",
-  "personal_signup.agree_title": "NEEDS_LOC",
-  "personal_signup.create_your_account": "NEEDS_LOC"
+  "personal_signup.signup_title": "Registrarse",
+  "personal_signup.first_name": "Nombre",
+  "personal_signup.last_name": "Apellidos",
+  "personal_signup.email": "Correo electronico",
+  "personal_signup.password": "Contraseña",
+  "personal_signup.confirm_password": "Confirmar contraseña",
+  "personal_signup.agree_title": "Al firmar acepta los terminos y condiciones ",
+  "personal_signup.create_your_account": "Crea tu cuenta"
 }
